Add image of recipe to the page

--- a/recipes/no_knead_bread.html
+++ b/recipes/no_knead_bread.html
@@ -6,5 +6,6 @@
 </head>
 <body>
     <h1>No Knead Bread</h1>
+    <img src="../images/nokneadbread.jpg" alt="perfectly baked no knead bread">
 </body>
 </html>
