Add headers, description, and ingredients

--- a/recipes/no_knead_bread.html
+++ b/recipes/no_knead_bread.html
@@ -7,5 +7,15 @@
 <body>
     <h1>No Knead Bread</h1>
     <img src="../images/nokneadbread.jpg" alt="perfectly baked no knead bread">
+    <h2>Simple wonderful bread</h2>
+    <p>This beginner friendly recipe will have you baking fantastic bread with a cripsy crust 
+        and fluffy interior with ease. </p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>Flour - 3 cups</li>
+        <li>Salt - 2 teaspoons</li>
+        <li>Active dry yeast - &frac34; teaspoon</li>
+        <li>Luke warm water - 1 &frac12; cups</li>
+    </ul>
 </body>
 </html>
