Add directions to recipe

--- a/recipes/no_knead_bread.html
+++ b/recipes/no_knead_bread.html
@@ -17,5 +17,17 @@
         <li>Active dry yeast - &frac34; teaspoon</li>
         <li>Luke warm water - 1 &frac12; cups</li>
     </ul>
+    <h3>Steps</h3>
+    <ol>
+        <li>Combine yeast and warm water then stir</li>
+        <li>In a large bowl mix the flour, salt and yeast mixture together until it forms a dough</li>
+        <li>Cover the dough and let rise for 6 - 8 hours</li>
+        <li>Shape the dough into a tight ball. Recover and let sit for 1 hour</li>
+        <li>Preheat the Dutch oven to 450F for 30 mins</li>
+        <li><strong>Carefully</strong> add the dough to the Dutch oven</li>
+        <li>Bake covered for 30mins</li>
+        <li>Remove lid and bake for 15 mins</li>
+        <li>Let the bread sit outside of the Dutch oven for 15mins before slicing</li>
+    </ol>
 </body>
 </html>
