Add link to pan seared rockfish page

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/no_knead_bread.html">No Knead Bread</a>
+    <a href="recipes/pan-seared-rockfish.html">Pan Seared Rockfish</a>
 </body>
 </html>
