Add image of completed recipe

--- a/recipes/pan-seared-rockfish.html
+++ b/recipes/pan-seared-rockfish.html
@@ -6,5 +6,6 @@
 </head>
 <body>
     <h1>Pan Seared Rockfish</h1>
+    <img src="../images/pansearedrockfish.jpg" alt="Seared rockfish with lemons and herbs on a plate">
 </body>
 </html>
