Add description and ingredients list

--- a/recipes/pan-seared-rockfish.html
+++ b/recipes/pan-seared-rockfish.html
@@ -7,5 +7,17 @@
 <body>
     <h1>Pan Seared Rockfish</h1>
     <img src="../images/pansearedrockfish.jpg" alt="Seared rockfish with lemons and herbs on a plate">
+    <h2>Crisp rockfish basted in herb butter</h2>
+    <p>Easy dinner for tender yet crispy fish that is filled with flavor</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>Fish fillets - 2 6oz pieces</li>
+        <li>Oil for frying - 3tbsp</li>
+        <li>Butter - 2tbsp</li>
+        <li>Thyme sprigs - 4</li>
+        <li>Lemon wedges - 2</li>
+        <li>Garlic - half clove</li>
+        <li>Salt - to taste</li>
+    </ul>
 </body>
 </html>
