Add list of directions

--- a/recipes/pan-seared-rockfish.html
+++ b/recipes/pan-seared-rockfish.html
@@ -19,5 +19,18 @@
         <li>Garlic - half clove</li>
         <li>Salt - to taste</li>
     </ul>
+    <h3>Steps</h3>
+    <ol>
+        <li>Pat both sides of each fillet dry with a paper towel</li>
+        <li>Season each side with salt</li>
+        <li>Preheat the cast iron skillet to a high heat</li>
+        <li>Add oil to the heated pan</li>
+        <li>Place the fillets skin side down</li>
+        <li>Reduce to medium heat and cook for 4 mins</li>
+        <li>Flip and add butter, garlic and thyme. Stir</li>
+        <li>Tilt the pan then baste the fish with a spoon</li>
+        <li>Baste occassionally for another 2 minutes</li>
+        <li>Squeeze the lemon wedge over the fillet and serve</li>
+    </ol>
 </body>
 </html>
